--- a/style.css
+++ b/style.css
@@ -281,6 +281,10 @@
     body {
       margin: 0px 0px;            
     }
+
+    .top-container {
+      grid-gap: 0px;
+    }
   }
   
   @media screen and (min-width: 601px) and (max-width: 1024px) {
