--- a/style.css
+++ b/style.css
@@ -279,7 +279,11 @@
     }
 
     body {
-      margin: 0px 0px;            
+      margin: 0px;            
+    }
+
+    .wrapper {
+      margin: 0px;            
     }
 
     .top-container {
